fix QR spacing

--- a/style.css
+++ b/style.css
@@ -128,8 +128,8 @@ button:active {
     max-width: 100%;
     height: auto;
     /* background-color: yellow; */
-    padding: 10px;
-    border-radius: 10px;
+    padding: 0px;
+    border-radius: 0px;
 }
 
 
